Added a missing language spanner in the alphabetic lists section title.

--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
     </section>
 
     <section id="alphabetical_lists">
-      <h4>Alphabetical (ሀለሐመ) Lists</h4>
+      <h4>Alphabetical (<span lang="am">ሀለሐመ</span>) Lists</h4>
       <p>The Unicode standard encodes Ethiopic syllables for many languages using Ethiopic script past and present.
          Alphabetic lists are commonplace in Ethiopic literature, but will conform to the letter inventory of the language of the surrounding content.
          The W3C’s <a href="https://www.w3.org/International/core/Overview">Internationalization Working Group</a> publishes alphabetical
