--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
          example of this appears in documents produced with a typewriter where a sheet of paper had to be moved between typewriters to produce
          a line in two scripts.  An apparent baseline difference here would be the result of mechanical misalignment.</p>
 
-       <p><em>The only point it seems to make here would be to state that Ethiopic and foreign scripts should share the same baseline.  This
+       <p><em>The only point that seems can be made here would be to state that Ethiopic and foreign scripts should share the same baseline.  This
               may already be the case with computer typography.  If so, this section should be removed.</em></p>
     </section>
   </section>
@@ -1577,7 +1577,7 @@
   <section id="h_pages">
     <h2>Layout &amp; Pages</h2>
     <p><em>Discuss: Basic common templates, Page elements, Page-level directionality, Bidirectional characteristics, Arrangement of elements, Text columns, Header, Footer, Illustrations, Tables, Page numbers, Margins, Positioning and arrangement of content, Pagination rules, Specimens and examples.</em></p>
-    <p><em>Page and section numbering can be discussed here.  The user (author) should be to set the numeral system with a CSS attribute. A tool tip to 
+    <p><em>Page and section numbering can be discussed here.  The user (author) should be able to set the numeral system with a CSS attribute. A tool tip to 
         over an ethiopic page number that presents the western equivalent would be useful.  Are there any rules on page number position?</em></p>
 
     <section id="h_page_margins">
