--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
          example of this appears in documents produced with a typewriter where a sheet of paper had to be moved between typewriters to produce
          a line in two scripts.  An apparent baseline difference here would be the result of mechanical misalignment.</p>
 
-       <p><em>The only point that seems can be made here would be to state that Ethiopic and foreign scripts should share the same baseline.  This
+       <p><em>Note: The only point that seems can be made here would be to state that Ethiopic and foreign scripts should share the same baseline.  This
               may already be the case with computer typography.  If so, this section should be removed.</em></p>
     </section>
   </section>
@@ -1576,9 +1576,7 @@
 
   <section id="h_pages">
     <h2>Layout &amp; Pages</h2>
-    <p><em>Discuss: Basic common templates, Page elements, Page-level directionality, Bidirectional characteristics, Arrangement of elements, Text columns, Header, Footer, Illustrations, Tables, Page numbers, Margins, Positioning and arrangement of content, Pagination rules, Specimens and examples.</em></p>
-    <p><em>Page and section numbering can be discussed here.  The user (author) should be able to set the numeral system with a CSS attribute. A tool tip to 
-        over an ethiopic page number that presents the western equivalent would be useful.  Are there any rules on page number position?</em></p>
+    <!-- p><em>Discuss: Basic common templates, Page elements, Page-level directionality, Bidirectional characteristics, Arrangement of elements, Text columns, Header, Footer, Illustrations, Tables, Page numbers, Margins, Positioning and arrangement of content, Pagination rules, Specimens and examples.</em></p -->
 
     <section id="h_page_margins">
       <h3>Page Margins</h3>
@@ -1601,26 +1599,42 @@
         </div>
     </section>
 
-    <section id="h_preface_page_numbering">
-    <h3>Preface Page Numbering</h3>
-    <p>The first numbered page in Ethiopic literature will generally be seen on the <span lang="am">መቅድም</span> section. When a <span lang="am">መቅድም</span> is not present,
-       numbering is expected to begin at the <span lang="am">መግቢያ</span>. The prevailing Modern Ethiopic practice is to begin counting pages from the inner cover page (this
-       is a matter of perception, by some views the outer cover is the first page and the inner cover, which is generally empty, is not counted). Thus the first printed
-       number appearing at either the <span lang="am">መቅድም</span> or <span lang="am">መግቢያ</span> is not "1" (or "<span lang="am">፩</span>") but the physical page count up to
-       this point (for example "4" or "5"). Most often the page number itself will appear in the center footer position.</p>
-    <p>Increasingly, modern authors and publishers are adding additional front matter sections (see <a href="#h_document_structure">Document Structure</a>) and moving "page 1"
-       out to either the <span lang="am">መቅድም</span> or <span lang="am">መግቢያ</span>. Prior to "page 1" preceding pages may be numbered in one of two ways.  In the first
-       convention where pages are numbered with Ethiopic numerals, the preface numbering may be alphabetic in the <span lang="am">ሀለሐመ</span> counting system or in the
-       <span lang="am">አበገደ</span> sequence (for example in Deste Tekle Wold's "<span lang="am">ዐዲስ፡ያማርኛ፡መዝገበ፡ቃላት።</span>").</p>
-    <p>In the second convetion where pages are numbers with Western numerals, the preface page numbering will apply Ethiopic numerals.  Under both conventions the preface page
-       number begins on the first printed page after the cover.</p>
-      <div class="issues">
-        <p>Issues/Questions:</p>
+    <section id="h_page_numbering">
+      <p>The layout and formatting of page and section numbering in Ethiopic practices does not demonstrate a marked difference from Western conventions. 
+         Most often the page number itself will appear in the center footer position but may appear in any standard position (header, footer, center or right side).
+         Page counting differences do need to be considered.</p>
+      <p>In Ethiopic book publishing, first numbered page will generally be seen on the <span lang="am">መቅድም</span> section. When a <span lang="am">መቅድም</span> is not present,
+         numbering is expected to begin at the <span lang="am">መግቢያ</span>. The prevailing Modern Ethiopic practice is to begin counting pages from the inner cover page (this
+         is a matter of perception, by some views the outer cover is the first page and the inner cover, which is generally empty, is not counted). Thus the first printed
+         number appearing at either the <span lang="am">መቅድም</span> or <span lang="am">መግቢያ</span> is not "1" (or "<span lang="am">፩</span>") but the physical page count up to
+         this point (for example "4" or "5").</p>
+      <p>At the author's discretion, either Western or Ethiopic numerals may be used for page numbers. In digital publishing, it is recommended that the a setting be offered
+         the user to toggle the numeral system from the published default. Additionally, a tooltip that appears when focus is over an Ethiopic page number to present the Western
+         numeral equivalent would be helpful for some readers.</p>
+        <div class="issues">
+          <p>Issues/Questions:</p>
+          <ol>
+            <li>Where is page 1 counted from?</li>
+            <li>Where does the first printed page appear?</li>
+            <li>Are there any other special considerations with page numbering? For example, page numbering of appendicies, etc.</li>
+          </ol>
+        </div>
+      <section id="h_preface_page_numbering">
+        <h4>Preface Page Numbering</h4>
+        <p>Increasingly, modern authors and publishers are adding additional front matter sections (see <a href="#h_document_structure">Document Structure</a>) and moving "page 1"
+           out to either the <span lang="am">መቅድም</span> or <span lang="am">መግቢያ</span>. Prior to "page 1" preceding pages may be numbered in one of two ways.  In the first
+           convention where pages are numbered with Ethiopic numerals, the preface numbering may be alphabetic in the <span lang="am">ሀለሐመ</span> counting system or in the
+           <span lang="am">አበገደ</span> sequence (for example in Deste Tekle Wold's "<span lang="am">ዐዲስ፡ያማርኛ፡መዝገበ፡ቃላት።</span>").</p>
+        <p>In the second convetion where pages are numbers with Western numerals, the preface page numbering will apply Ethiopic numerals.  Under both conventions the preface page
+           number begins on the first printed page after the cover.</p>
+        <div class="issues">
+          <p>Issues/Questions:</p>
           <ol>
             <li>Are the above descriptions accurate?</li>
             <li>Are there any other page numbering conventions that should be supported by software?</li>
           </ol>
         </div>
+      </section>
     </section>
 
     <section id="h_document_structure">
@@ -1860,7 +1874,7 @@
       </tr>
       <tr id="term.index">
         <td>Index</td>
-        <td lang="am">መጠቍ ም</td>
+        <td lang="am">መጠቍም</td>
         <td lang="ti">ኃባሪ ኣርእስቲ ገጽ</td>
         <td></td>
       </tr>
