Added a missing H3 for Page Numbering

--- a/index.html
+++ b/index.html
@@ -1600,6 +1600,7 @@
     </section>
 
     <section id="h_page_numbering">
+      <h3>Page Numbering</h3>
       <p>The layout and formatting of page and section numbering in Ethiopic practices does not demonstrate a marked difference from Western conventions. 
          Most often the page number itself will appear in the center footer position but may appear in any standard position (header, footer, center or right side).
          Page counting differences do need to be considered.</p>
