Added introduction to the Document Structure section.

--- a/index.html
+++ b/index.html
@@ -1640,7 +1640,11 @@
 
     <section id="h_document_structure">
       <h3>Document Structure</h3>
-      <p>[TBD: Introduce this section.]</p>
+      <p>Layout and formatting rules may specific to a section or region of a document. Page numbering as discussed in the previous section is a good example.
+         It is important to properly identify the regular sections of documents and to record any special requirements they may have in regards to layout and
+         formatting.  In this way software will be able to present documents as expected, reduce the formatting burden of authors through automation, as well
+         as automatically generate a table of contents as expected.</p>
+      <p>The following are identified book sections found a small corpus survey.  A maximal view is presented, few books may exhibit all sections indicated:</p>
       <p lang="am">መጽሐፍ<br/>
           &nbsp;&nbsp;አርእስት<br/>
           &nbsp;&nbsp;መታሰቢያ<br/>
@@ -1662,7 +1666,7 @@
           &nbsp;&nbsp;&nbsp;&nbsp;⋮<br/>
           &nbsp;&nbsp;ሙዳዬ ቃላት<br/>
           &nbsp;&nbsp;ዋቢ መጻሕፍት<br/>
-          &nbsp;&nbsp;መጠቍ ም</p>
+          &nbsp;&nbsp;መጠቍም</p>
 
       <div class="issues">
         <p>Issues/Questions:</p>
@@ -1670,6 +1674,7 @@
             <li>Are these sections correct? Are any missing?</li>
             <li>What sections are optional?</li>
             <li>Do any sections require special formatting?</li>
+            <li>Do certain classes of literature use different sections?</li>
           </ol>
         </div>
     </section>
