Added to hyphenation section to point out the document image samples as examples of Ethiopic word splitting across lines.

--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@
 
      <section id="ethiopic_hyphenation">
        <h3>Hyphenation</h3>
-       <p>In classical Ethiopic writing the wordspace separator symbol (<span lang="am">፡</span>) negated the need for word hyphenation across a line of text. When wordspace fell out of favor in modern writing the practice of splitting a word across lines of text continued.  The reader would know to mentally reconstruct the word by relying on the knowledge of lexicon and context.</p>
+       <p>In classical Ethiopic writing the wordspace separator symbol (<span lang="am">፡</span>) negated the need for word hyphenation across a line of text. Accordingly, a word could be split over across a line at any position. When wordspace fell out of favor in modern writing the practice of splitting a word across lines of text continued without change.  The reader would know to mentally reconstruct the word by relying on the knowledge of lexicon and context.  The scanned document samples within this report illustrate word splitting across lines both in the presence of wordspace and without.</p>
        <div class="issues">
          <p>Issues/Questions:</p>
          <ol>
