Unified "TBD:" notes.  Elliminated some redundant text in the wordspace substitution section.

--- a/index.html
+++ b/index.html
@@ -475,9 +475,7 @@
          substitution as per a user preference.  Thus the user would be able to read a document with Ethiopic wordspaces that
          was composed and delivered with white space. Likewise in the reverse, a user who preferred white space could have their preference
          supported in a document that encodes Ethiopic wordspaces only. Similarly, this functionality would be useful to users of an editor application.</p>
-      <p class="issues">Develop rules for space-wordspace substitution (e.g. context for when not to substitute a space for wordspace).</p>
-      <p class="issues">This could lead to a CSS word-separator property that a javascript could manipulate to toggle the wordspace.</p>
-      <p class="issues">TBD: Test cases should be developed to validate these rules.</p>
+      <p class="issues">[TBD: Test cases should be developed to validate these rules. Apply screenshots of test cases to help illustrate the requirement that a rule addresses.]</p>
       <p><span style="text-decoration: underline;"><strong>Space to Wordspace Transformation Rules</strong></span></p>
       <ol>
         <li>White space symbols other than space (U+0020) are not processed. <span  class="issues">Issue: how should non-breaking-space be handled?</span></li>
@@ -505,7 +503,6 @@
       </ol>
       <p>An additional wordspace conversion rule that is independent of the above space-wordspace substitution rules: Very commonly in Ethiopic documents
          a sequence of two wordspaces are found and may be substituted for ethiopic fullstop. This may be considered a defect correction rule.</p>
-      <p>Note that hyphenation is not required when wordspace is present, words split anywhere, would stakeholders still desire the hyphen nonetheless?</p>
     </section>
 
     <section id="ethiopic_gemination_mark_positioning">
@@ -684,7 +681,7 @@
       <section id="emphasis_within_prose">
         <h4>Emphasis Within Prose</h4>
         <p>Within a paragraph, a reference to a book title, or section title is given in italic. Words may also be emboldened to emphasize importance.</p>
-        <p>[TBD: Examples Needed]</p>
+        <p><em>[TBD: Examples Needed]</em></p>
         <div class="issues">
           <p>Issues/Questions:</p>
           <ol>
@@ -2054,7 +2051,7 @@
       </dd>
     </dl>
     <h2>Full Image References</h2>
-    <p>[TBD: Correlate the image references with Figure numbers]</p>
+    <p><em>[TBD: Correlate the image references with Figure numbers]</em></p>
     <dl class="ref">
       <dt>Ludolf, 1681</dt>
       <dd> <cite> <a href="https://books.google.com/books?id=j10VAAAAQAAJ&pg=PT237">Historia Aethiopica, sive brevis et succincta descriptio regni Habessinorum</a> </cite> H. Ludolf.  L.III.c.5 Paragraph 35.  Frankfurt: prostat apud Joh. David Zunne. 1681 </dd>
